Fixed margins on mobile nav

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -767,9 +767,9 @@ footer{
         z-index: 2;
         background: rgba(0, 0, 0, 1);
         width: 100%;
-        height: 43px;
-        position: fixed;
-        padding: 0.5rem 0;
+        height: 53px;
+		position: fixed;
+		padding: 0.3rem 0;
 
         .logo {
             position: relative;
@@ -831,7 +831,7 @@ footer{
             >a {
                 height: auto;
                 text-align: left;
-                padding: 1rem;
+                padding: 0.3rem 1rem;
 
                 transition: none;
                 background-color: rgba(255, 255, 255, 0);
@@ -843,7 +843,8 @@ footer{
         display: block;
         background-color: rgba(0, 0, 0, 0.8);
         transition: 1s ease;
-        top: -800%;
+        top: -1000%;
+		right: 0;
     }
 
     #nav:target>ul {
@@ -851,6 +852,7 @@ footer{
         background-color: rgba(0, 0, 0, 0.8);
         transition: 1s ease;
         top: 53px;
+        right: 0;
     }
 
     #nav>ul>li:not(:last-child)>a {}
